# Nairobi-Property-Listings

./: Dashboard.py  Data_Scrap.py  Data_Start.xlsx  README.md  Scrapper.py  Streamlit_app.py  main.py  model.pkl  pyproject.toml  raw_listings.csv
Notebooks/: Model_Improvement.ipynb  Modelling_Baseline.ipynb  data_cleaning.ipynb
data/: clean_listings.csv  data_dictionary.csv  nairobi_combined_all_property_types_test.csv
