[project]
name = "nairobi-house-price-sprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "chromedriver>=2.24.1",
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.40.0",
    "streamlit>=1.19.0",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.2.0",
]
